# vigneron-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  alembic.ini.backup  alembic.ini.bak  package-lock.json  package.json  pyproject.toml  server.js
alembic/: env.py
alembic/versions/: 392fbcb95244_add_users_activities_and_crop_specific_.py  98cd887f3634_add_revised_data_model_v1_1.py  ccc504093f88_add_organization_model.py  e62448293245_add_simple_gps_data_model.py
alembic_backup/: env.py
alembic_backup/versions/: 8cc6a60563f6_add_comprehensive_agricultural_data_.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: blocks.py  context.py  health.py  mobile.py  models.py  organizations.py  properties.py  spray_management.py
app/core/: config.py
app/db/: base.py
app/models/: __init__.py  activity.py  ai_model.py  base.py  block.py  crop_specific_data.py  financial_transaction.py  individual_vine.py  inference_request.py  organization.py  property.py  row.py  spray_product.py  user.py
app/schemas/: __init__.py  ai_model.py  base.py  common.py  inference.py  organization.py  user.py
models/: Vineyard.js  organization.py
routes/: api.js
services/: context_service.py  google_maps_service.py  weatherService.js
supabase/: config.toml
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_config.py
